--- a/src/Gotify.Client/Gotify.Client.csproj
+++ b/src/Gotify.Client/Gotify.Client.csproj
@@ -3,11 +3,16 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>latest</LangVersion>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
       <PackageReference Include="System.Text.Json" Version="5.0.2" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <None Include="../../LICENSE" Pack="true" Visible="false" PackagePath=""/>
     </ItemGroup>
 
 </Project>
